<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.example.android.camera.utils.AutoFitSurfaceView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@android:color/transparent" />

    <ImageButton
        android:id="@+id/capture_button"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="96dp"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_shutter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/capture" />

    <RadioGroup
        android:id="@+id/wb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        tools:visibility="visible">

    <RadioButton
        android:id="@+id/AWB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:clickable="true"
        android:text="@string/awb"
        android:focusable="true" />

    <RadioButton
        android:id="@+id/INCANDESCENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incandescent" />

    <RadioButton
        android:id="@+id/FLUORESCENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fluorescent" />

    <RadioButton
        android:id="@+id/WARM_FLUORESCENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warm_fluorescent" />

    <RadioButton
        android:id="@+id/DAYLIGHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daylight" />

    <RadioButton
        android:id="@+id/CLOUDY_DAYLIGHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloudy_daylight" />

    <RadioButton
        android:id="@+id/TWILIGHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twilight" />
    </RadioGroup>

    <Button
        android:id="@+id/hflip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wb"
        android:text="@string/hflip" />

    <Button
        android:id="@+id/vflip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hflip"
        android:text="@string/vflip" />

    <Button
        android:id="@+id/dewarp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vflip"
        android:text="@string/dewarp" />

    <TextView
        android:id="@+id/text_exposure_gain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dewarp"
        android:text="@string/exposure_gain" />

    <SeekBar
        android:id="@+id/exposure_gain"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_exposure_gain"
        android:layout_width="200dp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/text_exposure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exposure_gain"
        android:text="@string/exposure_time_ns" />

    <SeekBar
        android:id="@+id/exposure_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_exposure_time"
        android:layout_width="200dp"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/current_exposure_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exposure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>